update essai d'ajout d'une citation du user au JSON

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form action="" method="POST">
         <label for="">Nouvelle phrase :</label>
         <input type="text" name="newCitation" id="newCitation">
-        <input type="submit" value="Ajouter">
+        <input type="submit" value="Ajouter" onclick="addNewCitation()">
     </form>
     <!-- <script src="Confianceensoi.js"></script> -->
     <script src="modifHTML.js"></script>
